# nccl-tests

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  Makefile  README.md  build.sh  nccl_test.sh  ofccl_test.sh  run_a2av.sh  test.sh
.github/workflows/: pre-check.yml  pre_check.yml  release.yml
batch_test/: test_nccl.sh
doc/: PERFORMANCE.md
docker/: Dockerfile.cuda12.9.ubuntu22.04  Dockerfile.cuda12.x.ubuntu20.04  Dockerfile.cuda13.x.ubuntu22.04
os/: CMakeLists.txt  Makefile  linux.cc  os.h  windows.cc
paramfiles/alltoallv_paramfiles/: Rank2Test1.csv  Rank2Test2.csv  Rank3Test1.csv  Rank3Test2.csv  Rank4Test1.csv  Rank4Test2.csv  Rank4Test3.csv  Rank4Test4.csv  Rank4Test5.csv  Rank4Test6.csv
scripts/: env.sh  install_sihpc  nccl_perf  nccl_test  uninstall_sihpc
src/: CMakeLists.txt  Makefile  all_gather.cu  all_reduce.cu  all_reduce_group.cu  alltoall.cu  alltoallv.cu  alltoallv2.cu  bisection.cu  broadcast.cu  common.cu  common.h  common.mk  gather.cu  hypercube.cu  multimem_ops.h  nccl1_compat.h  reduce.cu  reduce_scatter.cu  runtest.sh  scatter.cu  sendrecv.cu  timer.cc  timer.h  ucommd.cc  ucommd.h  util.cu  util.h  vector_types.h
src_inplace/: Makefile  common_inplace.cu  ofccl_all_reduce_inp.cu
src_manual_size/: Makefile  common_ms.cu  common_ms.h  ofccl_all_reduce_ms.cu
src_nccl_manual_size/: Makefile  all_reduce_nccl_ms.cu  common_nccl_ms.cu  common_nccl_ms.h
src_simple/: Makefile  all_reduce_group.cu  all_reduce_simple.cu  common_simple.cu  common_simple.cu.pure  common_simple.cu.simple  common_simple.h  ofccl_all_gather.cu  ofccl_all_reduce.cu  ofccl_broadcast.cu  ofccl_reduce.cu  ofccl_reduce_scatter.cu
test_scripts/: auto_test.py
test_scripts/nccl/: run.sh  run_nccl.sh  static_nccl.cpp  static_nccl.out  static_nccl.sh  static_time.cpp  static_time.out
test_scripts/ofccl/: clear_static_ofccl.cpp  clear_static_ofccl.out  clear_static_ofccl.sh  clear_static_ofccl_time.cpp  clear_static_ofccl_time.out  run.sh  run_ofccl.sh  static.sh  static_ofccl_QE.cpp  static_ofccl_QE_ori.cpp  static_ofccl_bw.cpp  static_ofccl_bw_order.cpp  static_ofccl_time.cpp  static_ofccl_tm_order.cpp  static_ofccl_totalCnt.cpp  static_time.cpp  static_time.sh  statics_ofccl.cpp  statics_totalCtx.cpp
tests/: Makefile
tests/c/: test_input_validation.c  test_split_safety.c  test_util_safety.c
tools/: analyze_perf_json.py
verifiable/: CMakeLists.txt  Makefile  inexact_regress.cu  main.cu  verifiable.cu  verifiable.h  verifiable.mk
